add class blue in body and animation in class buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <img src="assets/logo.svg" alt="Logo NLW COPA">
+    <img class="logo" src="assets/logo.svg" alt="Logo NLW COPA">
   </header>
 
   <div id="card" class="card">
@@ -30,8 +30,8 @@
 
   <div class="buttons">
 
-    <button id="green" class="green"></button>
-    <button id="blue" class="blue clicked"></button>
+    <button id="green" class="green clicked"></button>
+    <button id="blue" class="blue "></button>
   </div>
 
 
